add  GET /tickets/:id endpoint
