# apps/api/src/routes/tickets.ts
@@ -1,6 +1,11 @@
 import { createRoute, OpenAPIHono } from "@hono/zod-openapi";
 import { createTrpcCaller } from "@repo/trpc";
-import { ticketListRequestQuery, ticketListSchema } from "@repo/validators";
+import {
+  ticketGetSchema,
+  ticketListRequestQuery,
+  ticketListSchema,
+  ticketSchema,
+} from "@repo/validators";
 
 const tickets = new OpenAPIHono();
 
@@ -8,12 +13,19 @@ tickets.openapi(
   createRoute({
     method: "get",
     title: "List Tickets",
-    summary: "Get all tickets",
+    summary: "Get many tickets",
     operationId: "listTickets",
     path: "/",
     tags: ["tickets"],
+    "x-codeSamples": [
+      {
+        lang: "js",
+        label: "JavaScript SDK",
+        source: "console.log('hello world')",
+      },
+    ],
     request: {
-      params: ticketListRequestQuery,
+      query: ticketListRequestQuery,
     },
     responses: {
       200: {
@@ -28,8 +40,37 @@ tickets.openapi(
   }),
   async (c) => {
     const caller = createTrpcCaller({ headers: c.req.raw.headers });
-    const query = c.req.query();
+    const query = c.req.valid("query");
     const data = await caller.tickets.list(query);
+    return c.json(data);
+  }
+);
+
+tickets.openapi(
+  createRoute({
+    method: "get",
+    title: "Get Ticket",
+    summary: "Get a ticket",
+    operationId: "getTicket",
+    path: "/{id}",
+    tags: ["tickets"],
+    request: {
+      params: ticketGetSchema,
+    },
+    responses: {
+      200: {
+        content: {
+          "application/json": {
+            schema: ticketSchema,
+          },
+        },
+        description: "Retrieve a single ticket",
+      },
+    },
+  }),
+  async (c) => {
+    const caller = createTrpcCaller({ headers: c.req.raw.headers });
+    const data = await caller.tickets.get(c.req.param());
     return c.json(data);
   }
 );
